<resources>
    <string name="app_name">ZooApp</string>
    <string name="placeholder1">Usuario</string>
    <string name="placeholder2">Contraseña</string>
    <string name="button_ingresar">Ingresar</string>
    <string name="question">¿No tienes cuenta?</string>
    <string name="registar_anchor">Registrate</string>

    //Segundo activity
    <string name="placeholder3">Buscar atracciones, comida, mas …</string>
    <string name="guia1">Toca el mapa para explorar</string>
    <string name="button1">Mapa</string>
    <string name="button2">Lista</string>
    <string name="button3">Informacion</string>
    <string name="button4">Perfil</string>

    //Tercer activity
    <string name="placeholder4">Buscar especies</string>
    <string name="animal1">LEON</string>
    <string name="description1">Este es un léon traído directamente desde el África</string>
    <string name="button_viewmore">Ver más</string>

    //Cuarto activity
    <string name="zoolo">INFORMACION DEL ZOOLOGICO</string>
    <string name="detalle">El zoologico "Lion" lleva 10 años ofreciendo a la cuidadania una vista
        clara de los animales que que se encuentran en el mundo, haciendo que la experiencia sea inolvidable.</string>
    <string name="horario">HORARIOS DE ATENCION</string>
    <string name="bt_requestTicket">Solicitar Boleto</string>
    <string name="solicitar">¿Quieres vivir la experiencia de visitarnos?</string>

    //contenido de la tabla
    //fila1
    <string name="enero">Horario de Enero a Marzo</string>
    //fila2
    <string name="primer_h">Lunes: 9:00 a 18:00</string>
    <string name="segundo_h">Miercoles: 9:00 a 18:00</string>
    <string name="tercer_h">Viernes: 9:00 a 18:00</string>

    //fila3
    <string name="marzo">Horario de Marzo a Julio:</string>
    //fila4
    <string name="primer_ho">Martes: 9:00 a 18:00</string>
    <string name="segundo_ho">Jueves: 9:00 a 18:00</string>
    <string name="tercer_ho">Sabado y Domingo: 9:00-11:00</string>

    //fila5
    <string name="julio">Horario de Julio a Noviembre:</string>
    //fila6
    <string name="primer_hor">Lunes: 9:00 a 18:00</string>
    <string name="segundo_hor">Miercoles: 9:00 a 18:00</string>
    <string name="tercer_hor">Viernes: 9:00 a 18:00 </string>

    //Quinto activity
    <string name="info_cuenta">INFORMACION DE LA CUENTA</string>
    <string name="usuario">Usuario:</string>
    <string name="nombre">Nombre:</string>
    <string name="apellido_p">Primer Apellido:</string>
    <string name="apellido_s">Segundo Apellido:</string>
    <string name="email">E-mail:</string>

    //Sexto activity
    <string name="titleticket">BOLETERÍA</string>
    //contenido de la tabla1
    //fila1
    <string name="header1">Tipo de boleto</string>
    <string name="header2">Precio</string>
    <string name="header3">Cantidad</string>

    //fila2
    <string name="td1">Niños</string>
    <string name="td2">0</string>
    <string name="td3">0</string>

    //fila3
    <string name="td4">Adultos</string>
    <string name="td5">0</string>
    <string name="td6">0</string>

    //contenido de la tabla2
    //fila1
    <string name="header4">Subtotal</string>
    <string name="ticket_type">Niños</string>
    <string name="quantity">0</string>
    <string name="subtotal">0.00</string>
    <string name="total">Total: 0.00</string>

    //botones
    <string name="button_buy">Comprar</string>
    <string name="button_cancel">Cancelar</string>





</resources>