<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuintoActivity">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="107dp"
            android:layout_height="match_parent"
            android:background="@drawable/buttons_style"
            android:contentDescription="@string/button1"
            app:srcCompat="@android:drawable/ic_menu_mapmode" />

        <ImageButton
            android:id="@+id/button_list"
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:background="@drawable/buttons_style"
            android:contentDescription="@string/button2"
            app:srcCompat="@android:drawable/ic_menu_agenda" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:background="@drawable/buttons_style"
            android:contentDescription="@string/button3"
            app:srcCompat="@android:drawable/ic_menu_info_details" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:background="@drawable/buttons_style"
            android:contentDescription="@string/button4"
            app:srcCompat="@android:drawable/ic_menu_myplaces" />

    </TableRow>
</androidx.constraintlayout.widget.ConstraintLayout>