<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SegundoActivity"
    android:background="#202732">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="107dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/button1"
            app:srcCompat="@android:drawable/ic_menu_mapmode"
            android:background="@drawable/buttons_style" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/button2"
            app:srcCompat="@android:drawable/ic_menu_agenda"
            android:background="@drawable/buttons_style"/>

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/button3"
            app:srcCompat="@android:drawable/ic_menu_info_details"
            android:background="@drawable/buttons_style"/>

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/button4"
            app:srcCompat="@android:drawable/ic_menu_myplaces"
            android:background="@drawable/buttons_style"/>

    </TableRow>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/guia1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="346dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/placeholder3"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="347dp"
            android:layout_height="437dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/zoo_map" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>