<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202732"
    tools:context=".TercerActivity">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="107dp"
            android:layout_height="match_parent"
            android:background="@drawable/buttons_style"
            android:contentDescription="@string/button1"
            app:srcCompat="@android:drawable/ic_menu_mapmode" />

        <ImageButton
            android:id="@+id/button_list"
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:background="@drawable/buttons_style"
            android:contentDescription="@string/button2"
            app:srcCompat="@android:drawable/ic_menu_agenda" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:background="@drawable/buttons_style"
            android:contentDescription="@string/button3"
            android:onClick="infor"
            app:srcCompat="@android:drawable/ic_menu_info_details" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:background="@drawable/buttons_style"
            android:contentDescription="@string/button4"
            app:srcCompat="@android:drawable/ic_menu_myplaces" />

    </TableRow>

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#34D192"
        android:ems="10"
        android:hint="@string/placeholder4"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        app:layout_constraintVertical_bias="0.051"
        app:srcCompat="@drawable/lion_image" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/animal1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/description1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons_style"
        android:text="@string/button_viewmore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.053"
        android:textColor="#5D4037" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginEnd="168dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="111dp"
        android:layout_height="50dp"
        android:layout_marginEnd="56dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/searchView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755" />

</androidx.constraintlayout.widget.ConstraintLayout>